Revise notebooks for sphinx documentation.

--- a/docs/source/notebooks/svd_ht.ipynb
+++ b/docs/source/notebooks/svd_ht.ipynb
@@ -2,21 +2,21 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "voluntary-speed",
+   "id": "elementary-reynolds",
    "metadata": {},
    "source": [
     "# Optimal hard threshold for singular values\n",
     "\n",
     "This notebook demonstrates the effect of rank-truncation on noise in the data. We show how the automatic estimation of the optimal rank simplifies the truncation. The notebook's content is based on the following two resources, where the first resource is an excellent Pyton-based tutorial on the optimal SVD-HT (SVD Hard Threshold), and the second resource is a research article covering the theory behind the optimal rank selection.\n",
-    "> Robert Taylor: [Optimal Singular Value Hard Threshold](http://www.pyrunner.com/weblog/2016/08/01/optimal-svht/), PyRunner Webblog, 2016\n",
     "\n",
-    "> M. Gavish and D. L. Donoho, [The Optimal Hard Threshold for Singular Values is $4/\\sqrt {3}$](https://ieeexplore.ieee.org/document/6846297), IEEE Transactions on Information Theory, vol. 60, no. 8, pp. 5040-5053, Aug. 2014, doi: 10.1109/TIT.2014.2323359."
+    "1. Robert Taylor: [Optimal Singular Value Hard Threshold](http://www.pyrunner.com/weblog/2016/08/01/optimal-svht/), PyRunner Webblog, 2016\n",
+    "2. M. Gavish and D. L. Donoho, The Optimal Hard Threshold for Singular Values is $4/\\sqrt {3}$, IEEE Transactions on Information Theory, vol. 60, no. 8, pp. 5040-5053, Aug. 2014, doi: [10.1109/TIT.2014.2323359](https://ieeexplore.ieee.org/document/6846297)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "existing-content",
+   "id": "great-lebanon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sporting-leeds",
+   "id": "italic-wrapping",
    "metadata": {},
    "source": [
     "## Creating the data matrix\n",
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "voluntary-poultry",
+   "id": "norwegian-basket",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "foster-metropolitan",
+   "id": "sustained-negotiation",
    "metadata": {},
    "source": [
     "## Singular value decomposition with hard threshold\n",
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "broken-local",
+   "id": "gothic-tuesday",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "every-editor",
+   "id": "divine-profit",
    "metadata": {},
    "source": [
     "Looking at the SVD meta data, we can see that an optimal threshold of two was estimated, but we chose a rank of 100. Let's plot the singular value distribution and show the optimal truncation."
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "mental-exception",
+   "id": "strategic-support",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "horizontal-nicholas",
+   "id": "atlantic-typing",
    "metadata": {},
    "source": [
     "Now we perform the SVD again, but this time with automatic rank trunction. Note that we could also use the previously computed SVD and do the truncation manually. The truncated SVD is significantly smaller than its full counterpart."
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "fantastic-bread",
+   "id": "military-toronto",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "romance-october",
+   "id": "solid-singapore",
    "metadata": {},
    "source": [
     "We can now reconstruct the full data based on the truncated SVD. Since we cut off the noisy modes, the SVD acts as a denoising tool in this application."
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "suited-discharge",
+   "id": "romance-cisco",
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "opponent-praise",
+   "id": "embedded-hampshire",
    "metadata": {},
    "outputs": [],
    "source": []
