Add notebooks to documenation and update documentation.

--- a/docs/source/notebooks/linear_algebra_basics.ipynb
+++ b/docs/source/notebooks/linear_algebra_basics.ipynb
@@ -4,11 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![CC](https://i.creativecommons.org/l/by/4.0/88x31.png)\n",
+    "\n",
+    "This work is licensed under a [Creative Commons Attribution 4.0 International License](http://creativecommons.org/licenses/by/4.0/).\n",
+    "\n",
     "# Linear algebra with PyTorch\n",
     "\n",
     "This notebook introduces some frequently used linear Algebra and tensor operations in PyTorch. For a general introduction to important concepts of linear Algebra, refer to:\n",
     "\n",
-    "> [Introduction to linear Algebra](https://math.mit.edu/~gs/linearalgebra/) by Gilbert Strang"
+    "> [Introduction to linear Algebra](https://math.mit.edu/~gs/linearalgebra/) by Gilbert Strang\n",
+    "\n",
+    "The first version of this notebook was created by **Mahdi Maktabi** during his time as student assisant at TU Braunschweig's [Institute of Fluid Mechanics](https://www.tu-braunschweig.de/ism)."
    ]
   },
   {
@@ -28,11 +34,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## PyTorch Tensors\n",
+    "## PyTorch tensors\n",
     "\n",
     "PyTorch provides a [tensor](https://pytorch.org/docs/stable/tensors.html) type to define $n$-dimensional arrays. Each element in a tensor must be of the same type. Working with PyTorch tensors has a very similar look and feel to working with Numpy arrays. flowTorch uses PyTorch tensors as data structure for field data.\n",
     "\n",
-    "### Creating Tensors"
+    "### Creating tensors"
    ]
   },
   {
