Update notebooks with new Dataloader attributes.

--- a/docs/source/notebooks/svd_cylinder.ipynb
+++ b/docs/source/notebooks/svd_cylinder.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "alternative-arrangement",
+   "id": "robust-sodium",
    "metadata": {},
    "source": [
     "![CC](https://i.creativecommons.org/l/by/4.0/88x31.png)\n",
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "persistent-shore",
+   "id": "fallen-infrared",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,8 +38,9 @@
     "import torch as pt\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib as mpl\n",
+    "from flowtorch import DATASETS\n",
     "from flowtorch.data import FOAMDataloader, mask_box\n",
-    "from flowtorch.analysis.svd import SVD\n",
+    "from flowtorch.analysis import SVD\n",
     "\n",
     "# increase resolution of plots\n",
     "mpl.rcParams['figure.dpi'] = 160"
@@ -47,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "regulated-copyright",
+   "id": "streaming-representation",
    "metadata": {},
    "source": [
     "## Assembling the data matrix\n",
@@ -66,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "expired-yukon",
+   "id": "lightweight-forty",
    "metadata": {},
    "outputs": [
     {
@@ -80,10 +81,10 @@
     }
    ],
    "source": [
-    "path = \"../../../test/test_data/run/of_cylinder2D_binary/\"\n",
+    "path = DATASETS[\"of_cylinder2D_binary\"]\n",
     "loader = FOAMDataloader(path)\n",
-    "times = loader.write_times()\n",
-    "fields = loader.field_names()\n",
+    "times = loader.write_times\n",
+    "fields = loader.field_names\n",
     "print(f\"Number of available snapshots: {len(times)}\")\n",
     "print(\"First five write times: \", times[:5])\n",
     "print(f\"Fields available at t={times[-1]}: \", fields[times[-1]])"
@@ -91,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dated-credits",
+   "id": "royal-speed",
    "metadata": {},
    "source": [
     "### Creating a mask\n",
@@ -102,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "psychological-generic",
+   "id": "sealed-question",
    "metadata": {},
    "outputs": [
     {
@@ -120,13 +121,13 @@
    ],
    "source": [
     "# load vertices and discard z-coordinate\n",
-    "vertices = loader.get_vertices()[:, :2]\n",
+    "vertices = loader.vertices[:, :2]\n",
     "mask = mask_box(vertices, lower=[0.1, -1], upper=[0.75, 1])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "killing-executive",
+   "id": "regular-bulgarian",
    "metadata": {},
    "source": [
     "When loading the vertices, the *loader* prints a warning message stating that we did not precompute cell centers and volumes. For small meshes, say less than $10^5$ cells, the computation can be performed without any problems in *flowTorch*. However, for larger meshes, it is much more efficient to use the dedicated *OpenFOAM* function objects. The mask is a 1D boolean tensor whose elements are `True` if the corresponding vertex is located within the specified bounds. Summing up the mask's elements yields the number of selected vertices (`True` and `False` are cast to 1 and 0, respectively)."
@@ -135,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "accomplished-sheffield",
+   "id": "cordless-illinois",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "owned-symposium",
+   "id": "loaded-caution",
    "metadata": {},
    "source": [
     "We can visualize the selected vertices using a simple scatter plot. For larger meshes and 3D data, it is more convinient to save the mask in the *flowTorch* HDF5 format and to visualize it in *ParaView*."
@@ -161,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "voluntary-laugh",
+   "id": "qualified-closer",
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "elementary-publicity",
+   "id": "fifteen-soldier",
    "metadata": {},
    "source": [
     "### Loading the snapshots and extracting the mean\n",
@@ -200,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "professional-offering",
+   "id": "noble-consequence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eight-contractor",
+   "id": "requested-wallet",
    "metadata": {},
    "source": [
     "## Singular value decomposition\n",
@@ -227,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "chicken-mayor",
+   "id": "remarkable-appeal",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "civilian-regular",
+   "id": "generic-metadata",
    "metadata": {},
    "source": [
     "### Singular values\n",
@@ -259,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "human-microphone",
+   "id": "widespread-buddy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "divine-surname",
+   "id": "hired-brother",
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "comparable-vegetarian",
+   "id": "conventional-announcement",
    "metadata": {},
    "source": [
     "### Left singular vectors\n",
@@ -318,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "experienced-mainland",
+   "id": "single-brave",
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "entertaining-prisoner",
+   "id": "executive-ratio",
    "metadata": {},
    "source": [
     "### Right singular vectors\n",
@@ -365,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "alert-assumption",
+   "id": "completed-wayne",
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "binary-senegal",
+   "id": "soviet-caution",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -424,7 +425,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
