--- a/docs/source/notebooks/svd_ht.ipynb
+++ b/docs/source/notebooks/svd_ht.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "otherwise-detection",
+   "id": "fatal-revision",
    "metadata": {},
    "source": [
     "![CC](https://i.creativecommons.org/l/by/4.0/88x31.png)\n",
@@ -20,14 +20,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "violent-declaration",
+   "id": "simple-sampling",
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch as pt\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
-    "from flowtorch.analysis.svd import SVD\n",
+    "from flowtorch.analysis import SVD\n",
     "\n",
     "# increase resolution of plots\n",
     "mpl.rcParams['figure.dpi'] = 160"
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "irish-chain",
+   "id": "hollywood-beads",
    "metadata": {},
    "source": [
     "## Creating the data matrix\n",
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "advance-thanksgiving",
+   "id": "atmospheric-rally",
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "independent-supervision",
+   "id": "express-fossil",
    "metadata": {},
    "source": [
     "## Singular value decomposition with hard threshold\n",
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "english-sympathy",
+   "id": "prepared-bloom",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "shared-labor",
+   "id": "demographic-sunrise",
    "metadata": {},
    "source": [
     "Examining the SVD meta data printed above, we can see that an optimal threshold of two was estimated, but we chose a rank of 100. Let's plot the singular value distribution and show the optimal truncation."
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "occupational-collar",
+   "id": "skilled-diagram",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "applied-biography",
+   "id": "apparent-greensboro",
    "metadata": {},
    "source": [
     "The additional non-zero singular values result from the added Gaussian noise. Now we perform the SVD again, but this time with automatic rank truncation. Note that we could also use the previously computed SVD and do the truncation manually. The truncated SVD is significantly smaller than its full counterpart."
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "conceptual-design",
+   "id": "indian-essex",
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "handy-interface",
+   "id": "valuable-airport",
    "metadata": {},
    "source": [
     "We can now reconstruct the full data based on the truncated SVD. Since we cut off the noisy modes, the SVD acts as a denoising tool in this application."
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "resident-divorce",
+   "id": "under-tuition",
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "confident-reviewer",
+   "id": "accredited-incidence",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -235,7 +235,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
