Add minor notation changes to linear algebra notebook and delete 2D airfoil notebook.

--- a/docs/source/notebooks/linear_algebra_basics.ipynb
+++ b/docs/source/notebooks/linear_algebra_basics.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +594,7 @@
        "tensor(1.0000)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -924,6 +924,8 @@
     "B = pt.tensor([[0., 3., 6.]]).view(3, 1)\n",
     "C = pt.mm(A, B)\n",
     "\n",
+    "# instead of the mm function we can also use the @ opertaor\n",
+    "assert pt.equal(C, A @ B)\n",
     "assert pt.equal(C, pt.tensor([15., 42., 69.]).view(3, 1))\n",
     "vis.plot_matrices_as_heatmap([A, B, C], [r\"$A$\", r\"$B$\", r\"$C$\"])"
    ]
@@ -997,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1307,14 +1309,16 @@
     "     [1.0, 0.0, -5.0],\n",
     "     [0.0, 1.0,  4.0]]\n",
     ")\n",
-    "# Currently, PyTorch has no complete support for complex numbers; the matrix above has real eigenvalues\n",
-    "val, vec = pt.eig(A, eigenvectors=True)\n",
-    "Q = vec\n",
-    "L = pt.diag(val[:, 0])\n",
-    "invQ = pt.inverse(Q)\n",
+    "\n",
+    "# the eigen decomposition returns complex tensors; to compare them with\n",
+    "# the original tensor, we remove the imaginary part\n",
+    "val, vec = pt.linalg.eig(A)\n",
+    "Q = vec.real\n",
+    "L = pt.diag(val).real\n",
+    "invQ = pt.linalg.inv(Q)\n",
     "\n",
     "assert pt.allclose(pt.mm(Q, invQ), pt.eye(3), atol=1.0E-3)\n",
-    "assert pt.allclose(A, pt.mm(Q, L).mm(invQ), atol=1.0E-3)\n",
+    "assert pt.allclose(A, pt.mm(Q, L).mm(invQ), atol=1.0E-2)\n",
     "vis.plot_matrices_as_heatmap([Q, L, invQ], [r\"$Q$\", r\"$\\Lambda$\", r\"$Q^{-1}$\"])"
    ]
   },
