Finalize JOSS article for submission.

--- a/paper.bib
+++ b/paper.bib
@@ -14,3 +14,58 @@
   volume = 	{1},
   doi = 	{10.24355/dbbs.084-202007011404-0}
 }
+
+@article{schmid2010,
+  title={Dynamic mode decomposition of numerical and experimental data},
+  volume={656}, DOI={10.1017/S0022112010001217},
+  journal={Journal of Fluid Mechanics},
+  publisher={Cambridge University Press},
+  author={Schmid, P. J.},
+  year={2010},
+  pages={5–28}
+}
+
+@article {fernex2021,
+	author = {Fernex, Daniel and Noack, Bernd R. and Semaan, Richard},
+	title = {Cluster-based network modeling{\textemdash}From snapshots to complex dynamical systems},
+	volume = {7},
+	number = {25},
+	elocation-id = {eabf5006},
+	year = {2021},
+	doi = {10.1126/sciadv.abf5006},
+	publisher = {American Association for the Advancement of Science},
+	journal = {Science Advances}
+}
+
+@incollection{paszke2015,
+title = {PyTorch: An Imperative Style, High-Performance Deep Learning Library},
+author = {Paszke, Adam and Gross, Sam and Massa, Francisco and Lerer, Adam and Bradbury, James and Chanan, Gregory and Killeen, Trevor and Lin, Zeming and Gimelshein, Natalia and Antiga, Luca and Desmaison, Alban and Kopf, Andreas and Yang, Edward and DeVito, Zachary and Raison, Martin and Tejani, Alykhan and Chilamkurthy, Sasank and Steiner, Benoit and Fang, Lu and Bai, Junjie and Chintala, Soumith},
+booktitle = {Advances in Neural Information Processing Systems 32},
+editor = {H. Wallach and H. Larochelle and A. Beygelzimer and F. d\textquotesingle Alch\'{e}-Buc and E. Fox and R. Garnett},
+pages = {8024--8035},
+year = {2019},
+publisher = {Curran Associates, Inc.},
+url = {http://papers.neurips.cc/paper/9015-pytorch-an-imperative-style-high-performance-deep-learning-library.pdf}
+}
+
+@book{kutz2016,
+author = {Kutz, J. Nathan and Brunton, Steven L. and Brunton, Bingni W. and Proctor, Joshua L.},
+title = {Dynamic Mode Decomposition},
+publisher = {Society for Industrial and Applied Mathematics},
+year = {2016},
+doi = {10.1137/1.9781611974508},
+address = {Philadelphia, PA},
+edition   = {},
+URL = {https://epubs.siam.org/doi/abs/10.1137/1.9781611974508}
+}
+
+@inbook{brunton2019,
+place={Cambridge},
+title={Singular Value Decomposition (SVD)},
+DOI={10.1017/9781108380690.002},
+booktitle={Data-Driven Science and Engineering: Machine Learning, Dynamical Systems, and Control},
+publisher={Cambridge University Press},
+author={Brunton, Steven L. and Kutz, J. Nathan},
+year={2019},
+pages={3–46}
+}
