Add syntax corrections to DMD intro notebook.

--- a/docs/source/notebooks/dmd_intro.ipynb
+++ b/docs/source/notebooks/dmd_intro.ipynb
@@ -91,7 +91,7 @@
     "$$\n",
     "The same problem may be posed with a time-continuous state $\\mathbf{x}=\\mathbf{x}(t)$ instead of discrete one. Then the basic formulation of DMD, mapping a given state linearly into the future, becomes a system of linear ordinary differential equations (ODEs):\n",
     "$$\n",
-    "\\frac{\\mathrm{d}\\mathbf{x}}{\\mathrm{d}t} = \\mathbf{\\mathcal{A}x},\n",
+    "\\frac{\\mathrm{d}\\mathbf{x}}{\\mathrm{d}t} \n",
     "$$\n",
     "where $\\mathbf{\\mathcal{A}}$ is the continuous counterpart of $\\mathbf{A}$ (the connection between both operators will be established in the following paragraphs). The initial value problem has the solution:\n",
     "$$\n",
@@ -145,7 +145,7 @@
     "\n",
     "### Steps to compute the DMD in practice\n",
     "\n",
-    "**1. Compute the SVD of $\\mathbf{X}$**\n",
+    "**1. Compute the SVD of the first data matrix**\n",
     "\n",
     "First, we factorize the data matrix $\\mathbf{X}$ into its singular value decomposition (SVD):\n",
     "$$\n",
