--- a/docs/source/notebooks/dmd_intro.ipynb
+++ b/docs/source/notebooks/dmd_intro.ipynb
@@ -91,9 +91,9 @@
     "$$\n",
     "The same problem may be posed with a time-continuous state $\\mathbf{x}=\\mathbf{x}(t)$ instead of discrete one. Then the basic formulation of DMD, mapping a given state linearly into the future, becomes a system of linear ordinary differential equations (ODEs):\n",
     "$$\n",
-    "\\frac{\\mathrm{d}\\mathbf{x}}{\\mathrm{d}t} \n",
+    "\\frac{\\mathrm{d}\\mathbf{x}}{\\mathrm{d}t} = \\mathbf{\\mathcal{A}} \\mathbf{x},\n",
     "$$\n",
-    "where $\\mathbf{\\mathcal{A}}$ is the continuous counterpart of $\\mathbf{A}$ (the connection between both operators will be established in the following paragraphs). The initial value problem has the solution:\n",
+    "where $\\mathbf{\\mathcal{A}}$ is the time-continuous counterpart of $\\mathbf{A}$ (the connection between both operators will be established in the following paragraphs). The initial value problem has the solution:\n",
     "$$\n",
     "  \\mathbf{x}(t) = \\mathrm{exp}\\left(\\mathbf{\\mathcal{A}}t\\right) \\mathbf{x}_0,\n",
     "$$\n",
@@ -730,7 +730,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -744,7 +744,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
