--- a/docs/source/notebooks/linear_algebra_basics.ipynb
+++ b/docs/source/notebooks/linear_algebra_basics.ipynb
@@ -1385,7 +1385,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1399,7 +1399,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
